// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > release > getReleases > 200 > ok 1`] = `
{
  "releases": [
    {
      "_id": "test",
    },
  ],
}
`;

exports[`routes > release > getReleases > audit > expected call 1`] = `
[
  {
    "_id": "test",
  },
]
`;
